opam-version: "1.2"
license:      "ISC"
maintainer:   "mort@cantab.net"
authors:      "Richard Mortier <mort@cantab.net>"
homepage:     "https://github.com/mor1/ocaml-mrt"
bug-reports:  "https://github.com/mor1/ocaml-mrt/issues"
dev-repo:     "https://github.com/mor1/ocaml-mrt.git"

build: [
  [make "configure"]
  [make "build"]
  ["cp" "./mrt.opam/install" "./mrt.install"]
]

install: [
  [make "install"]
]

build-test: [make "test"]

remove: [
  ["ocamlfind" "remove" "mrt"]
]

depends: [
  "ocamlfind" {build}
  "alcotest"  {test}
  "cstruct"   {>= "1.0.1"}
]

available: [ocaml-version >= "4.01.0"]
