opam-version: "1.2"
maintainer: "Richard Mortier <mort@cantab.net>"
authors: [ "Richard Mortier" ]
license: "ISC"

homepage: "https://github.com/mor1/ocaml-mrt"
dev-repo: "https://github.com/mor1/ocaml-mrt.git"
bug-reports: "https://github.com/mor1/ocaml-mrt/issues"
doc: "https://mor1.github.io/mrt-format/"

build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "alcotest"  {test}
  "cstruct"   {>= "1.0.1"}
]
